[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
version       = "0.1.0"
authors       = ["Sturdy <sturdy@apollo.farm>"]
edition       = "2021"
license       = "MPL-2.0"
homepage      = "https://apollo.farm"
repository    = "https://github.com/apollodao/neutron-reward-distributor"
documentation = ""
keywords      = ["blockchain", "cosmos", "cosmwasm"]
rust-version  = "1.69.0"

[workspace.dependencies]
cosmwasm-schema   = "1.2"
cosmwasm-std      = "1.2"
cw2               = "1.0"
cw-ownable        = "0.5"
thiserror         = "1"
cw-dex            = "0.3.0"
cw-storage-plus   = "1.1.0"
cw-vault-standard = "0.3.1"
apollo-cw-asset   = "0.1.1"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
