[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
version       = "0.1.0"
authors       = ["Sturdy <sturdy@apollo.farm>"]
edition       = "2021"
license       = "MPL-2.0"
homepage      = "https://apollo.farm"
repository    = "https://github.com/apollodao/neutron-reward-distributor"
documentation = ""
keywords      = ["blockchain", "cosmos", "cosmwasm"]
rust-version  = "1.69.0"

[workspace.dependencies]
cosmwasm-schema   = "1.2"
cosmwasm-std      = "1.2"
cw2               = "1.0"
cw-ownable        = "0.5"
thiserror         = "1"
cw-dex            = { version = "0.4.0-rc.1", features = ["astroport"] }
cw-storage-plus   = "1.1.0"
cw-vault-standard = "0.3.3-rc.1"
apollo-cw-asset   = "0.1.2"
cw-address-like   = "1.0.4"
derive_builder    = "0.12.0"
serde             = "1.0.171"
schemars          = "0.8.12"
cw20              = "0.15" # We use outdated cw20 because it's what Astroport uses...

# Repo Packages
neutron-astroport-reward-distributor = { path = "packages/reward-distributor" }

# Dev Dependencies
cw-it             = "0.1.3"
locked-astroport-vault-test-helpers = { git = "https://github.com/apollodao/locked-astroport-vault.git", rev = "6d443599c10f9d037fca710e42db9b9515e7047a" }
cw-vault-standard-test-helpers = "0.3.3-rc.1"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
