[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version       = "0.1.0"
authors       = ["Sturdy <sturdy@apollo.farm>"]
edition       = "2021"
license       = "MPL-2.0"
homepage      = "https://apollo.farm"
repository    = "https://github.com/apollodao/neutron-reward-distributor"
documentation = ""
keywords      = ["blockchain", "cosmos", "cosmwasm"]
rust-version  = "1.69.0"

[workspace.dependencies]
cosmwasm-schema   = "1.2"
cosmwasm-std      = "1.2"
cw2               = "1.0"
cw-ownable        = "0.5"
thiserror         = "1"
cw-dex            = { version = "0.4.0-rc.1", features = ["astroport"] }
cw-storage-plus   = "1.1.0"
cw-vault-standard = "0.3.3-rc.1"
apollo-cw-asset   = "0.1.2"
cw-address-like   = "1.0.4"
derive_builder    = "0.12.0"
serde             = "1.0.171"
schemars          = "0.8.12"
cw20              = "0.15" # We use outdated cw20 because it's what Astroport uses...

# Repo Packages
neutron-astroport-reward-distributor = { path = "packages/reward-distributor" }
neutron-astroport-reward-distributor-contract = { path = "contracts/reward-distributor" }
neutron-astroport-reward-distributor-test-helpers = { path = "packages/test-helpers" }

# Dev Dependencies
cw-it             = { version = "0.1.3", features = ["astroport-multi-test"] }
locked-astroport-vault-test-helpers = "0.1.0-rc.1"
# locked-astroport-vault-test-helpers = { path = "../locked-astroport-vault/test-helpers" }
cw-vault-standard-test-helpers = "0.3.3-rc.1"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
