[package]
name          = "neutron-astroport-reward-distributor-contract"
description   = "Description of the contract"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
rust-version  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std                         = { workspace = true }
cw2                                  = { workspace = true }
cw-ownable                           = { workspace = true }
neutron-astroport-reward-distributor = { workspace = true }
cw-vault-standard                    = { workspace = true }
cw-dex                               = { workspace = true }
apollo-cw-asset                      = { workspace = true }
cw20                                 = { workspace = true }
